# PyFPT

./: LICENSE  MANIFEST.in  README.md  chaotic_inflation_cython42.c  chaotic_inflation_cython42.html  chaotic_inflation_cython42.pyx  importance_sampling_sr_cython12.c  importance_sampling_sr_cython_bias_argument.py  inflation_functions_e_foldings.py  is_data_analysis.py  main.py  main_quantum_well.py  main_varying_bias_method.py  main_varying_delta_v.py  main_varying_phi_UV_v2.py  mpl_style.py  old_quantum_well_code.py  pyproject.toml  quantum_well_cython9.c  requirements.txt  setup.cfg  setup.py  stoage_for_inset_plot.py  stochastic_inflation_cosmology.py  stochastic_runge_kutta4methods.py  tilted_quantum_well_cython12.pyx
User guides/: IS_data_phi_i_6.48_iterations_100000_bias_0.0.csv  User Guide 1 - Installing and First Simulation.ipynb  User Guide 2 - Understanding the Data and The is_simulation Function.ipynb  User Guide 2 - Understanding the Data.ipynb  User Guide 3 - Diffusion Domination.ipynb  User Guide 4 - Multiple Dimensions.ipynb  mpl_style.py
docs/: referance.rst
paper/: paper.bib  paper.md
pyfpt/: __init__.py  testsphinx.py
tests/: test_classicality_criterion.py  test_data_in_histogram_bins.py  test_data_points_pdf.py  test_edgeworth_pdf.py  test_fourth_central_moment_efolds.py  test_gaussian_deviation.py  test_gaussian_pdf.py  test_histogram_data_truncation.py  test_histogram_normalisation.py  test_importance_sampling_1dim.py  test_importance_sampling_2dim.py  test_importance_sampling_cython.py  test_is_simulation.py  test_is_simulation_1dim.py  (+23 more)
(+128 files in other folders)
