[metadata]
name = PyFPT
version = 0.1.3
author = Joe Jackson
author_email = joseph.jackson@port.ac.uk
description = Stochastic first-passage time (FPT) simulations using importance sampling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jacks0nJ/PyFPT.git
project_urls =
    Bug Tracker = https://github.com/Jacks0nJ/PyFPT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    
[coverage:run]
plugins = Cython.Coverage

[options]
setup_requires =
	Cython
	numpy
	setuptools >= 30.3.0
packages = find:
install_requires =
	matplotlib
	mpmath
	numpy
	scipy
	pandas
python_requires = >=3.6

